third_party/rust/lazy_static-0.2.11/tests/compile-fail/incorrect_visibility_restriction.rs
// incorrect visibility restriction
#[macro_use]
extern crate lazy_static;

lazy_static! {
    pub(nonsense) static ref WRONG: () = ();
    //~^ ERROR incorrect visibility restriction
}

fn main() { }
